src/views/pages/home/Home.scss
.home {
  &__title {
    font-family: roboto,"sans-serif";
    font-size: 25px;
    font-weight: 600;
    &-section {
      margin: -30px auto 0;
      border-radius: 30px;
      background-color: #ffffff;
      max-width: 700px;
      padding: 20px;
      text-align: center;
    }
  }
  &__product-info {
    position: relative;
    text-align: center;
    margin-bottom: 100px;
    &.container {
      max-width: 700px;
    }
    &__l-image {
      position: absolute;
      width: 270px;
      top: 40px;
      right: calc(100% + 10px);
    }
    &__r-image {
      position: absolute;
      width: 270px;
      top: 40px;
      left: calc(100% + 10px);
      
    }
    &-title {
      font-family: roboto, sans-serif;
      font-size: 35px;
      font-weight: 900;
      letter-spacing: -.5px;
      color: #1f1f1f;
      margin-bottom: 25px;
      margin-top: 30px;
    }
    &-subtitle {
      font-family: lato, sans-serif;
      font-size: 18px;
      font-weight: 300;
      color: #1f1f1f;
    }
    &-list {
      margin-top: 50px;
      margin-left: 50px;
      text-align: left;
      &-item {
        font-family: lato,"sans-serif";
        font-size: 16px;
        font-weight: 300;
        line-height: 1.38;
        letter-spacing: normal;
        color: #1f1f1f;
        text-align: left;
        margin-bottom: 20px;
      }
    }
  }
  &__collection {
    background-color: #f7f7f7;
    padding-top: 60px;
    padding-bottom: 50px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    &-title {
      font-size: 35px;
      font-weight: bold;
      color: #389a63;
    }
    &-subtitle {
      margin-top: 20px;
      font-size: 20px;
      font-weight: 300;
    }
    &-swiper {
      &-outer {
        padding-top: 40px;
        width: 100%;
      }
      &-image {
        max-width: 100%;
        height: 100%;
      }
    }
  }

  &__form {
    text-align: center;
    margin-top: 80px;
    &-title {
      font-family: roboto,"sans-serif";
      font-size: 28px;
      font-weight: 500;
      line-height: 1.38;
      letter-spacing: normal;
      margin-bottom: 20px;
    }
    &-text {
      font-family: lato,"sans-serif";
      font-size: 20px;
      font-weight: 300;
      line-height: 1.38;
      letter-spacing: normal;
      margin-bottom: 25px;
    }
  }

  &__about-us {
    text-align: center;
    &-title {
      font-family: roboto,"sans-serif";
      font-size: 35px;
      font-weight: 500;
      line-height: 1.38;
      letter-spacing: normal;
    }
    &-text {
      font-family: lato,"sans-serif";
      font-size: 23px;
      font-weight: 300;
      line-height: 1.38;
      letter-spacing: normal;
      margin-bottom: 40px;
    }
  }
}

.swiper-button {
  &-prev, &-next {
    background-color: #4d4d4d;
    color: #ffffff;
    border-radius: 50px;
    width: 40px;
    height: 40px;
    opacity: 0.6;
    &::after {
      font-size: 20px;
    }
  }
  &-prev {
    left: 30px;
  }
  &-next {
    right: 30px;
  }
}

@media only screen and (max-width: 768px) {
  .home {
    &__product-info {
      margin-bottom: 50px;
      &__l-image {
        right: calc(100% - 25px);
      }
      &__r-image {
        left: calc(100% - 25px);
      }
      &-title {
        font-size: 25px;
      }
      &-subtitle {
        font-size: 15px;
      }
      &-list {
        margin-left: auto;
        margin-right: auto;
        margin-top: 30px;
        max-width: 300px;
        &-item {
          font-size: 15px;
          margin-bottom: 15px;
        }
      }
    }
    &__collection {
      &-title {
        font-size: 25px;
        padding: 0 15px;
      }
      &-subtitle {
        font-size: 16px;
        padding: 0 15px;
      }
    }
    &__form {
      margin-top: 40px;
      &-title {
        font-size: 22px;
      }
      &-text {
        font-size: 15px;
      }
    }
    &__about-us {
      &-title {
        font-size: 25px;
      }
      &-text {
        font-size: 16px;
        margin-bottom: 40px;
      }
    }
  }
}

